<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text4"
                        android:textSize="30sp"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:paddingTop="10dp"
                        android:textColor="@android:color/black"
                        android:paddingLeft="10sp"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black"/>

            <TextView
                android:id="@+id/text5"
                android:layout_below="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Allahabad's Kumbh - a sangam of faiths"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingRight="10sp"
                android:paddingTop="10dp"
                android:paddingLeft="10sp"
                android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="143dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/infot"
                    android:paddingRight="10sp"
                    android:layout_below="@+id/text5"
                    android:paddingLeft="10sp"
                    android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/triveni"
                android:layout_below="@id/text6"
                android:layout_marginBottom="60dp"
                android:layout_gravity="center_horizontal|center_vertical" />

                <TextView
                    android:id="@+id/text7"
                    android:layout_below="@+id/img3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infot2"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_below="@+id/text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infot3"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/text8"
                        android:layout_below="@+id/text7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/infot4"
                        android:paddingTop="10dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:paddingLeft="10sp"
                        android:paddingRight="10sp"
                        android:textColor="@android:color/black"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />


                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:src="@drawable/history"
                        android:layout_below="@id/text8"
                        android:layout_marginBottom="60dp"
                        android:layout_marginTop="60dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/text9"
                        android:layout_below="@+id/img4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/infot5"
                        android:paddingTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingLeft="10sp"
                        android:paddingRight="10sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/text10"
                        android:layout_below="@+id/text9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/infot6"
                        android:paddingTop="10dp"
                        android:paddingLeft="10sp"
                        android:textSize="25sp"
                        android:paddingRight="10sp"
                        android:textColor="@android:color/black"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/text11"
                        android:layout_below="@+id/text10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/infot7"
                        android:layout_gravity="center_horizontal"
                        android:paddingLeft="10sp"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="15dp"
                        android:paddingRight="10sp"
                        android:textColor="@android:color/black"/>


                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:background="@drawable/circle"
                android:text="@string/button1"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@android:color/white"
                android:layout_gravity="end|right"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"/>

</android.support.v4.widget.DrawerLayout>